# efficiency

./: CMakeLists.txt  INSTALL  README  Sources_DB.lib  Win_Files  eff_install  eff_install_windows  main.cpp
.github/workflows/: SetVersionByTag.yml
.obs/deb/: debian.changelog  debian.control  debian.rules  efficiency.dsc
.obs/rpm/: efficiency.changes  efficiency.spec
Data/: Sources_DB.lib
Resources/: app_images.qrc  sourcesLib.qrc
include/: Database.hh  mainwindow.hh  newwindow.hh
src/: Database.cpp  mainwindow.cpp  newwindow.cpp
